2002-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 2.3

2002-01-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftp.tcl: Fix for bug #503471. The commands Get, Reget, and Newer
	  now check if the directory the local file is to be placed in
	  does exist. They now immediately throw an error if the directory
	  does not exist instead of starting the download and getting
	  confused.

	* ftp.n: Typo fix. Updates in the descriptions of Get, Reget, and
	  Newer explaining the new behaviour, s.a.

2001-11-20  Joe English <jenglish@users.sourceforge.net>

	* ftp.n: (r1.6 -> r1.8) Update for bug report #474999 
	  "ftp man page description typo" -- attempt to clarify
	  description of "ftp::List" command.  Also fixed minor 
	  markup errors.

2001-11-19  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftp.tcl: Tested implementation of FR #481161. Fixed the errors
	  found that way (incomplete cleanup by 'Get', interfered with the
	  following 'Put' command).

2001-11-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftp.tcl, ftp.n: Implemented and documented FR #481161.

	* ftp.tcl: Applied patch #428053 provided by Sreangsu Acharyya
	  <srean_list@myrealbox.com>. The patch extends 'Reget' to allow
	  download of an exactly specified slice of the the source
	  file. This enables the implementation of a 'resume' after a
	  partial download and also the parallel download of
	  non-overlaping parts of the same file from different servers.

	* ftp.n: updated documentation to cover the new code above and
	  below.
	
	* ftp_geturl.tcl: New file, provides a geturl command for use by
	  uri. Declared in a separate package to avoid a cyclic dependency
	  between the ftp and uri packages. The uri package is changed to
	  try for a scheme::geturl package first and then for a scheme
	  package to get the desired functionality. Implements FR #476804.
